--- a/crm/src/main/resources/application.properties
+++ b/crm/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+jdbc.driverClass=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/crm?characterEncoding=utf-8&useSSL=false
+jdbc.username=root
+jdbc.password=root
